openmp flags do not work for cpp
git-svn-id: https://svn.r-project.org/R/trunk@54278 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/Makeconf.in
+++ b/Makeconf.in
@@ -101,7 +101,7 @@ X_EXTRA_LIBS = @X_EXTRA_LIBS@
 YACC = @YACC@
 
 ALL_CFLAGS = $(R_XTRA_CFLAGS) $(R_OPENMP_CFLAGS) $(MAIN_CFLAGS) $(CFLAGS)
-ALL_CPPFLAGS = $(R_XTRA_CPPFLAGS) $(R_OPENMP_CFLAGS) $(CPPFLAGS) $(DEFS)
+ALL_CPPFLAGS = $(R_XTRA_CPPFLAGS) $(CPPFLAGS) $(DEFS)
 ALL_FFLAGS = $(R_XTRA_FFLAGS) $(R_OPENMP_FFLAGS) $(MAIN_FFLAGS) $(FFLAGS)
 ALL_OBJCFLAGS = $(R_XTRA_OBJCFLAGS) $(MAIN_OBJCFLAGS) $(OBJCFLAGS)
 ALL_CFLAGS_LO = $(R_XTRA_CFLAGS) $(R_OPENMP_CFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(CFLAGS)
