--- a/doc/manual/Makefile.win
+++ b/doc/manual/Makefile.win
@@ -5,8 +5,10 @@
 ECHO = echo
 
 include ../../src/gnuwin32/MkRules
+
 ifeq ($(strip $(shell latex --version | grep ^MiKTeX | wc -l)),1)
 # MiKTeX
+RHOME=$(shell ../../src/gnuwin32/Rpwd.exe ../..)
 R_TEXOPTS=--include-directory=$(RHOME)/share/texmf/tex/latex
 TEXI2DVI=texi2dvi
 else
