Rpwd.exe is no longer made
git-svn-id: https://svn.r-project.org/R/trunk@54657 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/Makefile.win
+++ b/doc/manual/Makefile.win
@@ -8,8 +8,7 @@ include ../../src/gnuwin32/MkRules
 
 ifeq ($(strip $(shell latex --version | grep ^MiKTeX | wc -l)),1)
 # MiKTeX
-RHOME=$(shell ../../src/gnuwin32/Rpwd.exe ../..)
-R_TEXOPTS=--include-directory=$(RHOME)/share/texmf/tex/latex
+R_TEXOPTS=--include-directory=../../share/texmf/tex/latex
 TEXI2DVI=texi2dvi
 else
 R_TEXOPTS=
