--- a/doc/manual/Makefile.win
+++ b/doc/manual/Makefile.win
@@ -100,17 +100,9 @@ else
 	$(TEXI2DVI) --pdf --texinfo="@set UseExternalXrefs " $<
 endif
 
-## We have to be careful not to install a local R-admin.html made prior to
-## texinfo 4.7, as doc/html/SearchEngine.html links to it.
-## So use that in the sources if we can -- it is not in the svn archive.
-## There are no cross-references, external or not.
 R-admin.html: $(srcdir)/R-admin.texi
-	@if test -f "$(top_srcdir)/doc/html/R-admin.html" ; then \
-	  cp "$(top_srcdir)/doc/html/R-admin.html" R-admin.html ; \
-	else \
-	  $(ECHO) "creating doc/manual/$@" ; \
-	  $(TEXI2HTML) -I$(srcdir) $(srcdir)/R-admin.texi -o $@ || touch $@ ; \
-	fi
+	$(ECHO) "creating doc/manual/$@"
+	$(TEXI2HTML) -I$(srcdir) $(srcdir)/R-admin.texi -o $@ || touch $@
 
 R-FAQ.html: R-FAQ.texi
 	@$(ECHO) "creating doc/manual/$@"
