experiment with R --no-environ CMD etc
git-svn-id: https://svn.r-project.org/R/trunk@54659 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/R.sh.in
+++ b/src/scripts/R.sh.in
@@ -208,6 +208,26 @@ while test -n "${1}"; do
       fi
       args="${args} -e $a"
       ;;
+    --no-environ)
+      export R_ENVIRON=''
+      export R_ENVIRON_USER=''
+      args="${args} ${1}"
+      ;;
+    --no-site-file)
+      export R_PROFILE=''
+      args="${args} ${1}"
+      ;;
+    --no-init-file)
+      export R_PROFILE_USER=''
+      args="${args} ${1}"
+      ;;
+    --vanilla)
+      export R_ENVIRON=''
+      export R_ENVIRON_USER=''
+      export R_PROFILE=''
+      export R_PROFILE_USER=''
+      args="${args} ${1}"
+      ;;
     *)
       args="${args} ${1}" ;;
   esac
