--- a/src/scripts/R.sh.in
+++ b/src/scripts/R.sh.in
@@ -113,17 +113,10 @@ Commands:
 Please use 'R CMD command --help' to obtain further information about
 the usage of 'command'.
 
+Options --arch, --no-environ, --no-init-file and --no-site-file can be
+placed between R and CMD, to apply to R processes run by 'command'
+
 Report bugs to <r-bugs@r-project.org>."
-
-### We also have this in compiled code -> use that one to always be in sync
-# version="R REPLACE_BY_VERSION.
-# Copyright (C) REPLACE_BY_YEAR R Development Core Team
-
-# R is free software and comes with ABSOLUTELY NO WARRANTY.
-# You are welcome to redistribute it under the terms of the GNU
-# General Public License.  For more information about these matters,
-# see http://www.gnu.org/copyleft/gpl.html."
-
 
 ## some systems have a more portable sed, e.g. /usr/xpg4/bin/sed on Solaris,
 ## so make sure that is used.
@@ -175,9 +168,6 @@ while test -n "${1}"; do
       debugger_args=`echo "${1}" | ${SED} -e 's/[^=]*=//'` ;;
     -h|--help)
       echo "${usage}"; exit 0 ;;
-## use the version in compiled code to always be in sync      
-#    --version)
-#      echo "${version}"; exit 0 ;;
     --args)
       break ;;
     --arch)
