more on startup
git-svn-id: https://svn.r-project.org/R/trunk@54680 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/R.sh.in
+++ b/src/scripts/R.sh.in
@@ -113,8 +113,8 @@ Commands:
 Please use 'R CMD command --help' to obtain further information about
 the usage of 'command'.
 
-Options --arch, --no-environ, --no-init-file and --no-site-file can be
-placed between R and CMD, to apply to R processes run by 'command'
+Options --arch, --no-environ, --no-init-file, --no-site-file and --vanilla
+can be placed between R and CMD, to apply to R processes run by 'command'
 
 Report bugs to <r-bugs@r-project.org>."
 
