Added compiler package as a base package.
git-svn-id: https://svn.r-project.org/R/trunk@54719 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/configure.ac
+++ b/configure.ac
@@ -2484,6 +2484,8 @@ AC_CONFIG_FILES(
   src/library/Makefile
   src/library/base/DESCRIPTION
   src/library/base/Makefile
+  src/library/compiler/DESCRIPTION
+  src/library/compiler/Makefile
   src/library/datasets/DESCRIPTION
   src/library/datasets/Makefile
   src/library/graphics/DESCRIPTION
