avoid needing grep and wc
git-svn-id: https://svn.r-project.org/R/trunk@54749 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/Makefile.win
+++ b/doc/manual/Makefile.win
@@ -6,8 +6,7 @@ ECHO = echo
 
 include ../../src/gnuwin32/MkRules
 
-ifeq ($(strip $(shell latex --version | grep ^MiKTeX | wc -l)),1)
-# MiKTeX
+ifeq "$(MIKTEX)" "TRUE"
 R_TEXOPTS=--include-directory=../../share/texmf/tex/latex
 TEXI2DVI=texi2dvi
 else
