check for ICONV_CONST even if NLS is disabled mark which defines are only needed for src/extra/intl
git-svn-id: https://svn.r-project.org/R/trunk@54764 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/include/config.h.in
+++ b/src/include/config.h.in
@@ -73,7 +73,7 @@
 /* Define if you have BSD networking headers and libraries. */
 #undef HAVE_BSD_NETWORKING
 
-/* Define to 1 if the compiler understands __builtin_expect. */
+/* Define to 1 if the compiler understands __builtin_expect. (For intl) */
 #undef HAVE_BUILTIN_EXPECT
 
 /* Define to 1 if you have the <bzlib.h> header file. */
@@ -113,11 +113,11 @@
 #undef HAVE_CEXP
 
 /* Define to 1 if you have the MacOS X function CFLocaleCopyCurrent in the
-   CoreFoundation framework. */
+   CoreFoundation framework. (For intl) */
 #undef HAVE_CFLOCALECOPYCURRENT
 
 /* Define to 1 if you have the MacOS X function CFPreferencesCopyAppValue in
-   the CoreFoundation framework. */
+   the CoreFoundation framework. (For intl) */
 #undef HAVE_CFPREFERENCESCOPYAPPVALUE
 
 /* Define to 1 if you have the `chdir' function. */
@@ -171,15 +171,15 @@
 #undef HAVE_DECL_ATANH
 
 /* Define to 1 if you have the declaration of `feof_unlocked', and to 0 if you
-   don't. */
+   don't. (For intl) */
 #undef HAVE_DECL_FEOF_UNLOCKED
 
 /* Define to 1 if you have the declaration of `fgets_unlocked', and to 0 if
-   you don't. */
+   you don't. (For intl) */
 #undef HAVE_DECL_FGETS_UNLOCKED
 
 /* Define to 1 if you have the declaration of `getc_unlocked', and to 0 if you
-   don't. */
+   don't. (For intl) */
 #undef HAVE_DECL_GETC_UNLOCKED
 
 /* Define to 1 if you have the declaration of `isfinite', and to 0 if you
@@ -235,11 +235,11 @@
 #undef HAVE_DECL_VSNPRINTF
 
 /* Define to 1 if you have the declaration of `_snprintf', and to 0 if you
-   don't. */
+   don't. (For intl) */
 #undef HAVE_DECL__SNPRINTF
 
 /* Define to 1 if you have the declaration of `_snwprintf', and to 0 if you
-   don't. */
+   don't. (For intl) */
 #undef HAVE_DECL__SNWPRINTF
 
 /* Define to 1 if you have the <dirent.h> header file, and it defines `DIR'.
@@ -369,7 +369,8 @@
 /* Define if you have support for ftp/http access. */
 #undef HAVE_INTERNET
 
-/* Define if you have the 'intmax_t' type in <stdint.h> or <inttypes.h>. */
+/* Define if you have the 'intmax_t' type in <stdint.h> or <inttypes.h>. (For
+   intl) */
 #undef HAVE_INTMAX_T
 
 /* Define to 1 if the system has the type `intptr_t'. */
@@ -379,7 +380,7 @@
 #undef HAVE_INTTYPES_H
 
 /* Define if <inttypes.h> exists, doesn't clash with <sys/types.h>, and
-   declares uintmax_t. */
+   declares uintmax_t. (For intl) */
 #undef HAVE_INTTYPES_H_WITH_UINTMAX
 
 /* Define to 1 if you have the `isblank' function. */
@@ -457,10 +458,10 @@
 /* Define to 1 if you have the `log2' function. */
 #undef HAVE_LOG2
 
-/* Define if you have the 'long double' type. */
+/* Define if you have the 'long double' type. (For intl) */
 #undef HAVE_LONG_DOUBLE
 
-/* Define to 1 if the system has the type `long long int'. */
+/* Define to 1 if the system has the type `long long int'. (For intl) */
 #undef HAVE_LONG_LONG_INT
 
 /* Define if your system has lzma >= 4.999. */
@@ -547,16 +548,18 @@
    by POSIX. */
 #undef HAVE_POSIX_LEAPSECONDS
 
-/* Define if your printf() function supports format strings with positions. */
+/* Define if your printf() function supports format strings with positions.
+   (For intl) */
 #undef HAVE_POSIX_PRINTF
 
 /* Define if you have POSIX.1 compatible sigsetjmp/siglongjmp. */
 #undef HAVE_POSIX_SETJMP
 
-/* Define if the <pthread.h> defines PTHREAD_MUTEX_RECURSIVE. */
+/* Define if the <pthread.h> defines PTHREAD_MUTEX_RECURSIVE. (For intl) */
 #undef HAVE_PTHREAD_MUTEX_RECURSIVE
 
-/* Define if the POSIX multithreading library has read/write locks. */
+/* Define if the POSIX multithreading library has read/write locks. (For intl)
+   */
 #undef HAVE_PTHREAD_RWLOCK
 
 /* Define to 1 if you have the `putenv' function. */
@@ -635,7 +638,7 @@
 #undef HAVE_STDINT_H
 
 /* Define if <stdint.h> exists, doesn't clash with <sys/types.h>, and declares
-   uintmax_t. */
+   uintmax_t. (For intl) */
 #undef HAVE_STDINT_H_WITH_UINTMAX
 
 /* Define to 1 if you have the <stdlib.h> header file. */
@@ -728,7 +731,8 @@
 /* Define to 1 if you have the `tsearch' function. */
 #undef HAVE_TSEARCH
 
-/* Define if you have the 'uintmax_t' type in <stdint.h> or <inttypes.h>. */
+/* Define if you have the 'uintmax_t' type in <stdint.h> or <inttypes.h>. (For
+   intl) */
 #undef HAVE_UINTMAX_T
 
 /* Define to 1 if the system has the type `uintptr_t'. */
@@ -743,10 +747,11 @@
 /* Define to 1 if you have the `unsetenv' function. */
 #undef HAVE_UNSETENV
 
-/* Define if you have the 'unsigned long long' type. */
+/* Define if you have the 'unsigned long long' type. (For intl) */
 #undef HAVE_UNSIGNED_LONG_LONG
 
-/* Define to 1 if the system has the type `unsigned long long int'. */
+/* Define to 1 if the system has the type `unsigned long long int'. (For intl)
+   */
 #undef HAVE_UNSIGNED_LONG_LONG_INT
 
 /* Define to 1 if you have the `vasprintf' function. */
@@ -759,7 +764,7 @@
 #undef HAVE_VECLIB_FW
 
 /* Define to 1 or 0, depending whether the compiler supports simple visibility
-   declarations. */
+   declarations. (For intl) */
 #undef HAVE_VISIBILITY
 
 /* Define to 1 if __attribute__((visibility())) is supported */
@@ -771,7 +776,7 @@
 /* Define to 1 if you have the <wchar.h> header file. */
 #undef HAVE_WCHAR_H
 
-/* Define if you have the 'wchar_t' type. */
+/* Define if you have the 'wchar_t' type. (For intl) */
 #undef HAVE_WCHAR_T
 
 /* Define to 1 if you have the `wcrtomb' function. */
@@ -804,7 +809,7 @@
 /* Define to 1 if you have the <wctype.h> header file. */
 #undef HAVE_WCTYPE_H
 
-/* Define if you have the 'wint_t' type. */
+/* Define if you have the 'wint_t' type. (For intl) */
 #undef HAVE_WINT_T
 
 /* Define to 1 if you have cairo. */
@@ -841,7 +846,7 @@
 /* Define if you have IEEE 754 floating point arithmetic. */
 #undef IEEE_754
 
-/* Define if integer division by zero raises signal SIGFPE. */
+/* Define if integer division by zero raises signal SIGFPE. (For intl) */
 #undef INTDIV0_RAISES_SIGFPE
 
 /* Define if you have 32 bit ints. */
@@ -890,10 +895,11 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* Define if <inttypes.h> exists and defines unusable PRI* macros. */
+/* Define if <inttypes.h> exists and defines unusable PRI* macros. (For intl)
+   */
 #undef PRI_MACROS_BROKEN
 
-/* Define if the pthread_in_use() detection is hard. */
+/* Define if the pthread_in_use() detection is hard. (For intl) */
 #undef PTHREAD_IN_USE_DETECTION_HARD
 
 /* Define as the return type of signal handlers (`int' or `void'). */
@@ -952,7 +958,7 @@
 #undef SIZEOF_SIZE_T
 
 /* Define as the maximum value of type 'size_t', if the system doesn't define
-   it. */
+   it. (For intl) */
 #undef SIZE_MAX
 
 /* If using the C implementation of alloca, define if you know the
@@ -984,25 +990,25 @@
 /* Define to use Apple's ICU. */
 #undef USE_ICU_APPLE
 
-/* Define if the POSIX multithreading library can be used. */
+/* Define if the POSIX multithreading library can be used. (For intl) */
 #undef USE_POSIX_THREADS
 
 /* Define if references to the POSIX multithreading library should be made
-   weak. */
+   weak. (For intl) */
 #undef USE_POSIX_THREADS_WEAK
 
-/* Define if the GNU Pth multithreading library can be used. */
+/* Define if the GNU Pth multithreading library can be used. (For intl) */
 #undef USE_PTH_THREADS
 
 /* Define if references to the GNU Pth multithreading library should be made
-   weak. */
+   weak. (For intl) */
 #undef USE_PTH_THREADS_WEAK
 
-/* Define if the old Solaris multithreading library can be used. */
+/* Define if the old Solaris multithreading library can be used. (For intl) */
 #undef USE_SOLARIS_THREADS
 
 /* Define if references to the old Solaris multithreading library should be
-   made weak. */
+   made weak. (For intl) */
 #undef USE_SOLARIS_THREADS_WEAK
 
 /* Enable extensions on AIX 3, Interix.  */
@@ -1027,7 +1033,7 @@
 #endif
 
 
-/* Define if the Win32 multithreading API can be used. */
+/* Define if the Win32 multithreading API can be used. (For intl) */
 #undef USE_WIN32_THREADS
 
 /* Define according to your operating system type. */
@@ -1085,14 +1091,14 @@
 #undef pid_t
 
 /* Define as the type of the result of subtracting two pointers, if the system
-   doesn't define it. */
+   doesn't define it. (For intl) */
 #undef ptrdiff_t
 
 /* Define to `unsigned int' if <sys/types.h> does not define. */
 #undef size_t
 
 /* Define to unsigned long or unsigned long long if <stdint.h> and
-   <inttypes.h> don't define. */
+   <inttypes.h> don't define. (For intl) */
 #undef uintmax_t
 
 
