--- a/src/include/Rmath.h0.in
+++ b/src/include/Rmath.h0.in
@@ -1,6 +1,6 @@
 /* -*- C -*-
  *  Mathlib : A C Library of Special Functions
- *  Copyright (C) 1998-2007  The R Development Core Team
+ *  Copyright (C) 1998-2011  The R Development Core Team
  *  Copyright (C) 2004       The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -61,8 +61,6 @@ double  Rlog1p(double);
 #define log1p Rlog1p
 #endif
 
-/* For back-compatibility for now (2.13.x) */
-#define pythag hypot
 
 	/* Undo SGI Madness */
 
@@ -276,6 +274,7 @@ double  Rlog1p(double);
 #define pt		Rf_pt
 #define ptukey		Rf_ptukey
 #define punif		Rf_punif
+#define pythag		Rf_pythag
 #define pweibull	Rf_pweibull
 #define pwilcox		Rf_pwilcox
 #define qbeta		Rf_qbeta
@@ -572,6 +571,7 @@ double	bessel_y_ex(double, double, double *);
 #ifndef HAVE_HYPOT
 double 	hypot(double, double);
 #endif
+double 	pythag(double, double);
 #ifndef HAVE_EXPM1
 double  expm1(double); /* = exp(x)-1 {care for small x} */
 #endif
