test for powl, which Cygwin lacks
git-svn-id: https://svn.r-project.org/R/trunk@54774 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/include/config.h.in
+++ b/src/include/config.h.in
@@ -555,6 +555,9 @@
 /* Define if you have POSIX.1 compatible sigsetjmp/siglongjmp. */
 #undef HAVE_POSIX_SETJMP
 
+/* Define to 1 if you have the `powl' function. */
+#undef HAVE_POWL
+
 /* Define if the <pthread.h> defines PTHREAD_MUTEX_RECURSIVE. (For intl) */
 #undef HAVE_PTHREAD_MUTEX_RECURSIVE
 
