--- a/configure.ac
+++ b/configure.ac
@@ -1711,7 +1711,8 @@ AC_CHECK_DECLS([alloca], , ,
 ## FreeBSD 8.2 lacks log2
 ## FreeBSD 7.3 lacks nearbyintl/rintl (nearbyint appeared in 5.2)
 ## Apparently rint was once broken on HP-UX: undefine HAVE_RINT for such platforms
-R_CHECK_FUNCS([expm1 hypot log1p log2 log10 nearbyint nearbyintl rint rintl], [#include <math.h>])
+## Cygwin lacks powl
+R_CHECK_FUNCS([expm1 hypot log1p log2 log10 nearbyint nearbyintl powl rint rintl], [#include <math.h>])
 ## va_copy is C99: required as from R 2.13.0
 R_CHECK_FUNCS([va_copy], [#include <stdarg.h>])
 if test "${ac_cv_have_decl_va_copy}" = "no"; then
