add some support for package compilation
git-svn-id: https://svn.r-project.org/R/trunk@54785 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -21,6 +21,18 @@ all:
 	@$(MK) NEWSdocs htmldocs docfiles
 	@$(MK)  -C ../../po -f Makefile.win
 
+bytecode:
+	@$(MK) MkRules
+	@if test -f  ../../SVN-REVISION ; then \
+	  cp ../../SVN-REVISION ../../SVN-REVISION.bak ; \
+	fi
+	@$(MK) rbuild
+	@$(MK) -C ../library -f Makefile.win bytecode WIN=$(WIN)
+	@$(MK) -C ../library -f Makefile.win docs
+	@$(MK) NEWSdocs htmldocs docfiles
+	@$(MK)  -C ../../po -f Makefile.win
+
+
 rpackages:
 	@$(MK) -C ../library -f Makefile.win all WIN=$(WIN)
 	@$(MK) -C ../library -f Makefile.win docs
@@ -332,6 +344,12 @@ link-recommended:
 recommended:
 	@$(ECHO) "--- Making recommended packages"
 	@$(MK) -C ../library/Recommended -f Makefile.win
+
+## FIXME: this does not work if 'recommended' has already been done
+bytecode-recommended:
+	@$(ECHO) "--- Making and compiling recommended packages"
+	@R_COMPILE_PKGS=1 R_COMPILER_SUPPRESS_ALL=1 \
+	  $(MK) -C ../library/Recommended -f Makefile.win
 
 docfiles:
 	@$(MK) -f Makefile.docs
