for consistency with Unix
git-svn-id: https://svn.r-project.org/R/trunk@54788 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -21,7 +21,9 @@ all:
 	@$(MK) NEWSdocs htmldocs docfiles
 	@$(MK)  -C ../../po -f Makefile.win
 
-bytecode:
+bytecode: bytecode-base bytecode-recommended
+
+bytecode-base:
 	@$(MK) MkRules
 	@if test -f  ../../SVN-REVISION ; then \
 	  cp ../../SVN-REVISION ../../SVN-REVISION.bak ; \
