set default for notangle
git-svn-id: https://svn.r-project.org/R/trunk@54937 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/configure.ac
+++ b/configure.ac
@@ -581,7 +581,7 @@ R_PROG_BROWSER
 ## PDF viewer
 R_PROG_PDFVIEWER
 ## Noweb
-AC_PATH_PROG(NOTANGLE, notangle)
+AC_PATH_PROG(NOTANGLE, notangle, false)
 
 ## Cairo needs pkg-config
 AC_PATH_PROG(PKGCONF,pkg-config,[],[$PATH:/usr/local/bin:/ext/bin:/ext:/sw/bin:/opt/bin])
